--- a/app/src/main/res/layout/fragment_receipt_detail.xml
+++ b/app/src/main/res/layout/fragment_receipt_detail.xml
@@ -45,7 +45,7 @@
                 android:layout_gravity="start"
                 android:fontFamily="@font/roboto_medium"
                 android:paddingStart="10dp"
-                android:text="приход"
+                android:text="Приход"
                 android:textColor="@color/color_c0" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -96,6 +96,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:layout_marginTop="@dimen/margin_16"
                     android:id="@+id/title_total_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -112,7 +113,7 @@
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/roboto_regular"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/title_total_cost"
                     tools:text="20000" />
 
                 <TextView
@@ -122,7 +123,8 @@
                     android:fontFamily="@font/roboto_regular"
                     android:text="Скидка"
                     app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
-                    app:layout_constraintTop_toBottomOf="@id/title_total_cost" />
+                    app:layout_constraintTop_toBottomOf="@id/title_total_cost"
+                    />
 
                 <TextView
                     android:id="@+id/discount"
@@ -134,21 +136,23 @@
                     tools:text="20000" />
 
                 <View
+                    android:background="@color/divider_lt"
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    app:layout_constraintTop_toBottomOf="@+id/title_discount" />
+                    app:layout_constraintTop_toBottomOf="@+id/title_discount"
+                    android:layout_marginTop="@dimen/margin_8"/>
 
                 <TextView
                     android:id="@+id/title_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Итог"
+                    android:text="ИТОГО"
                     android:textSize="18sp"
-                    android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="@+id/title_total_cost"
-                    app:layout_constraintTop_toTopOf="@id/divider" />
+                    app:layout_constraintTop_toTopOf="@id/divider"
+                    android:layout_marginTop="@dimen/margin_8"/>
 
                 <TextView
                     android:id="@+id/total"
@@ -156,9 +160,8 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18sp"
-                    android:textStyle="bold"
                     app:layout_constraintRight_toRightOf="@+id/total_cost"
-                    app:layout_constraintTop_toTopOf="@id/divider"
+                    app:layout_constraintTop_toTopOf="@id/title_total"
                     tools:text="2220" />
 
                 <TextView
@@ -171,6 +174,7 @@
                     app:layout_constraintTop_toBottomOf="@id/title_total" />
 
                 <TextView
+                    android:fontFamily="@font/roboto_regular"
                     android:id="@+id/nds"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -190,6 +194,7 @@
                     app:layout_constraintTop_toBottomOf="@id/nds_type" />
 
                 <TextView
+                    android:fontFamily="@font/roboto_regular"
                     android:id="@+id/cash"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -199,10 +204,12 @@
                     tools:text="114" />
 
                 <View
+                    android:background="@color/divider_lt"
                     android:id="@+id/divider_cred"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    app:layout_constraintTop_toBottomOf="@+id/title_payment" />
+                    app:layout_constraintTop_toBottomOf="@+id/title_payment"
+                    android:layout_marginTop="@dimen/margin_8"/>
 
                 <ImageView
                     android:id="@+id/diplomat_icon"
@@ -224,6 +231,7 @@
                     tools:text="OOO ''Астория''" />
 
                 <TextView
+                    android:fontFamily="@font/roboto_regular"
                     android:id="@+id/address"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -279,6 +287,7 @@
                     tools:text="Место расчетов" />
 
                 <TextView
+                    android:fontFamily="@font/roboto_regular"
                     android:id="@+id/payment_place"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -288,6 +297,8 @@
                     tools:text="346500, Ростовская область, г.Шахты, ул.Шевченко 141" />
 
                 <View
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:background="@color/divider_lt"
                     android:id="@+id/divider_shop_info"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
