--- a/app/src/main/res/layout/item_position.xml
+++ b/app/src/main/res/layout/item_position.xml
@@ -12,27 +12,29 @@
         android:id="@+id/position_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_receipt_24"
         android:fontFamily="@font/roboto_medium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Обои Артикул № 000004" />
+        tools:text="Обои Артикул № 000004"
+        app:drawableLeftCompat="@drawable/ic_baseline_receipt_24" />
 
+<!--    android:textSize="12sp"-->
     <TextView
+        android:fontFamily="@font/roboto_regular"
         android:id="@+id/receipt_item_single_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/position_name"
         tools:text="1.000 X 2.00 = 2.00" />
 
+<!--    android:textSize="12sp"-->
     <TextView
+        android:fontFamily="@font/roboto_regular"
         android:id="@+id/receipt_item_nds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/receipt_item_single_position"
@@ -40,20 +42,23 @@
         tools:visibility="visible" />
 
 
+<!--    android:textSize="12sp"-->
     <TextView
+        android:fontFamily="@font/roboto_regular"
         android:id="@+id/receipt_item_position_discount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="СКИДКА = 1.00"
-        android:textSize="12sp"
+
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/receipt_item_nds" />
 
+<!--    android:textSize="12sp"-->
     <TextView
+        android:fontFamily="@font/roboto_regular"
         android:id="@+id/receipt_item_position_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/receipt_item_position_discount"
         tools:text="ЦЕНА = 1203.55" />
