--- a/app/src/main/res/layout/statistic_fragment.xml
+++ b/app/src/main/res/layout/statistic_fragment.xml
@@ -52,7 +52,7 @@
             android:layout_margin="10dp"
             android:layout_marginEnd="@dimen/margin_16"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_network"
+            tools:src="@drawable/ic_network"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
